ajustes swagger, dependencias

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,4 +7,4 @@ logging.level.org.springframework.data.mongodb=ERROR
 ## Mongo config
 spring.data.mongodb.database=app_reactive_test
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.uri=mongodb://localhost:27018/?replicaSet=rs0
+spring.data.mongodb.uri=mongodb://root:admin@localhost:27017
