--- a/build.gradle
+++ b/build.gradle
@@ -15,23 +15,24 @@ configurations {
 }
 
 repositories {
+	// other repositories
+	maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local/' }
 	mavenCentral()
 }
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
 
-	// swagger-io
-	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+//	// swagger-io
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-ui', version: '1.4.3'
 
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 	testImplementation 'io.projectreactor:reactor-test'
 }
+
 
 test {
 	useJUnitPlatform()
