Criação de novos endpoints de busca, por id e por externalid Criação do handler de exception Ajustes no objeto de response Ajustes nos mapper de dados Ajustes nas configs para permitir a criação dos index no mongo

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,3 +8,4 @@ logging.level.org.springframework.data.mongodb=ERROR
 spring.data.mongodb.database=app_reactive_test
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.uri=mongodb://root:admin@localhost:27017
+spring.data.mongodb.auto-index-creation=true
