--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ logging.level.org.springframework.data.mongodb=ERROR
 spring.data.mongodb.database=app_reactive_test
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.uri=mongodb://localhost:27018/?replicaSet=rs0
+spring.data.mongodb.auto-index-creation=true
