Add endpoint para chamada external, novos testes para controller, testes de service Add novos arquivos no resource de testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.data.mongodb.database=app_reactive_test
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.uri=mongodb://localhost:27018/?replicaSet=rs0
 spring.data.mongodb.auto-index-creation=true
+
+app.path-uri-beeceptor.uri=https://olarmeuok.free.beeceptor.com
