--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -9,3 +9,6 @@ spring.data.mongodb.database=app_reactive_test
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.uri=mongodb://root:admin@localhost:27017
 spring.data.mongodb.auto-index-creation=true
+
+
+app.path-uri-beeceptor.uri=https://olarmeuok.free.beeceptor.com
